--- a/scss/applets/_settings.scss
+++ b/scss/applets/_settings.scss
@@ -57,6 +57,11 @@ $gradient2: linear-gradient(193.33deg, #9356dc -11.44%, #ff79da 123.93%);
   box-sizing: border-box;
   text-decoration: none;
 
+  *::selection {
+    background: $green1;
+
+  }
+
 }
 
 a {
@@ -77,7 +82,10 @@ body {
   font-family: $font4;
   font-size: 1rem;
   box-shadow: 0px 2px 10px rgba(59, 59, 59, 0.25);
+
+
 }
+
 
 img {
   object-fit: cover;
