--- a/scss/applets/_footer.scss
+++ b/scss/applets/_footer.scss
@@ -26,11 +26,7 @@ footer {
     }
   }
 
-  a {
-    color: $white;
-  }
-
-  @media screen and (min-width: 1224px) {
+  @media screen and (min-width: 768px) {
     padding: 30px 0 20px;
     display: flex;
     flex-direction: row-reverse;
@@ -55,14 +51,13 @@ footer {
       }
 
       li {
-        margin-right: 20px;
+        margin-right: 2px;
       }
 
-      #ml {
+      li:nth-child(3) {
         margin-left: 50px;
-      }
 
+      }
     }
   }
-
 }
