--- a/scss/applets/_header.scss
+++ b/scss/applets/_header.scss
@@ -10,9 +10,6 @@ header {
 
   .header__logo img {
     width: 50%;
-    max-width: 200px;
-
-
 
   }
 
@@ -24,15 +21,19 @@ header {
   }
 
   #header__loc__imput {
-
-    border: 1px;
     background: none;
     font-family: $font4;
     font-size: 1rem;
-    border-color: red;
+    border-color: transparent;
 
     &::placeholder {
       color: $black;
+    }
+
+    &[type="text"]:focus {
+      background: $gradient1;
+      opacity: 0.5;
+
     }
   }
 
@@ -55,7 +56,7 @@ header {
     padding: 15px;
 
     i {
-      @include absolute-el(28px, auto, auto, 25px, auto, auto)
+      @include absolute-el(28px, auto, auto, 25px, auto, auto);
     }
   }
 
