--- a/scss/index.css
+++ b/scss/index.css
@@ -1,21 +1,21 @@
 @font-face {
-  font-family: "Shrikhand";
+  font-family: Shrikhand;
   src: url(../../assets/fonts/Shrikhand-Regular.ttf);
 }
 @font-face {
-  font-family: "Roboto";
+  font-family: Roboto;
   src: url(../../fonts/Roboto-Regular.ttf);
 }
 @font-face {
-  font-family: "Roboto-bold";
+  font-family: Roboto-bold;
   src: url(../../assets/fonts/Roboto-Bold.ttf);
 }
 @font-face {
-  font-family: "Roboto-Light";
+  font-family: Roboto-Light;
   src: url(../../assets/fonts/Roboto-Light.ttf);
 }
 @font-face {
-  font-family: "Roboto-Medium";
+  font-family: Roboto-Medium;
   src: url(../../assets/fonts/Roboto-Medium.ttf);
 }
 * {
