--- a/scss/applets/_settings.scss
+++ b/scss/applets/_settings.scss
@@ -2,27 +2,27 @@
 
 @font-face {
   font-family: Shrikhand;
-  src: url(../../assets/fonts/Shrikhand-Regular.ttf)
+  src: url(.././assets/fonts/Shrikhand-Regular.ttf)
 }
 
 @font-face {
   font-family: Roboto;
-  src: url(../../fonts/Roboto-Regular.ttf);
+  src: url(.././fonts/Roboto-Regular.ttf);
 }
 
 @font-face {
   font-family: Roboto-bold;
-  src: url(../../assets/fonts/Roboto-Bold.ttf)
+  src: url(.././assets/fonts/Roboto-Bold.ttf)
 }
 
 @font-face {
   font-family: Roboto-Light;
-  src: url(../../assets/fonts/Roboto-Light.ttf)
+  src: url(.././assets/fonts/Roboto-Light.ttf)
 }
 
 @font-face {
   font-family: Roboto-Medium;
-  src: url(../../assets/fonts/Roboto-Medium.ttf)
+  src: url(.././assets/fonts/Roboto-Medium.ttf)
 }
 
 // Variables :
