--- a/scss/index.css
+++ b/scss/index.css
@@ -1,22 +1,22 @@
 @font-face {
   font-family: Shrikhand;
-  src: url(../../assets/fonts/Shrikhand-Regular.ttf);
+  src: url(.././assets/fonts/Shrikhand-Regular.ttf);
 }
 @font-face {
   font-family: Roboto;
-  src: url(../../fonts/Roboto-Regular.ttf);
+  src: url(.././fonts/Roboto-Regular.ttf);
 }
 @font-face {
   font-family: Roboto-bold;
-  src: url(../../assets/fonts/Roboto-Bold.ttf);
+  src: url(.././assets/fonts/Roboto-Bold.ttf);
 }
 @font-face {
   font-family: Roboto-Light;
-  src: url(../../assets/fonts/Roboto-Light.ttf);
+  src: url(.././assets/fonts/Roboto-Light.ttf);
 }
 @font-face {
   font-family: Roboto-Medium;
-  src: url(../../assets/fonts/Roboto-Medium.ttf);
+  src: url(.././assets/fonts/Roboto-Medium.ttf);
 }
 * {
   margin: 0;
@@ -1002,6 +1002,7 @@ header .header__loc i {
 }
 .main-container .menus-container__cards .menus-container__cards_content__price span {
   border-radius: 0 15px 15px 0;
+  margin-left: 10px;
   padding: 0 15px;
   width: 115%;
   height: 100%;
