--- a/scss/layouts/_main-container.scss
+++ b/scss/layouts/_main-container.scss
@@ -225,8 +225,8 @@
       }
 
       span {
-
         border-radius: 0 15px 15px 0;
+        margin-left: 10px;
         padding: 0 15px;
         width: 115%;
         height: 100%;
