--- a/scss/index.css
+++ b/scss/index.css
@@ -427,7 +427,7 @@ header .header__loc i {
 .header__pages .header__pages__logo img {
   width: 50%;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 880px) {
   .header__pages .header__pages__logo img,
   .header__pages .header__pages__logo i {
     display: none;
@@ -458,7 +458,7 @@ header .header__loc i {
   margin-bottom: 60px;
   position: relative;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 880px) {
   .choose-section {
     width: 100%;
     display: -webkit-box;
@@ -476,10 +476,7 @@ header .header__loc i {
   text-align: left;
   padding: 30px 20px 0;
 }
-@media screen and (min-width: 768px) {
-  .choose-section h2 {
-    max-width: 1040px;
-  }
+@media screen and (min-width: 880px) {
   .choose-section h2 .choose-section__restos {
     position: relative;
   }
@@ -494,7 +491,7 @@ header .header__loc i {
           flex-direction: column;
   gap: 40px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 880px) {
   .choose-section nav {
     display: grid;
     grid-template-columns: 33% 33% 33%;
@@ -533,7 +530,7 @@ header .header__loc i {
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 880px) {
   .choose-section .choose-section__restos {
     width: 335px;
   }
@@ -569,7 +566,7 @@ header .header__loc i {
   background: #f6f6f6;
   padding-bottom: 60px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 880px) {
   .restaurants-section {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -600,7 +597,7 @@ header .header__loc i {
 .restaurants-section .restaurants-section__cards-container .restaurants-section__cards-container__cards {
   margin-bottom: 10px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 880px) {
   .restaurants-section .restaurants-section__cards-container {
     max-width: 1080px;
     display: grid;
@@ -670,7 +667,7 @@ header .header__loc i {
 .restaurants-section .restaurants-section__cards-container__cards .restaurants-section__cards-container__cards__encart.restaurants-section__cards-container__cards__encart p {
   color: #008766;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 880px) {
   .restaurants-section .restaurants-section__cards-container__cards {
     width: 490px;
   }
@@ -742,7 +739,7 @@ header .header__loc i {
       -ms-flex-align: center;
           align-items: center;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 880px) {
   .main-container {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -777,7 +774,7 @@ header .header__loc i {
   max-width: 1440px;
   height: 375px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 880px) {
   .main-container .main-container__img img {
     height: 383px;
   }
@@ -792,7 +789,7 @@ header .header__loc i {
   display: -ms-flexbox;
   display: flex;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 880px) {
   .main-container .menus-container__name {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
@@ -805,7 +802,7 @@ header .header__loc i {
   font-size: 1.75rem;
   margin-right: 20px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 880px) {
   .main-container .menus-container__name h1 {
     padding-bottom: 190px;
   }
@@ -826,7 +823,7 @@ header .header__loc i {
   -webkit-transform: translate(auto, auto);
           transform: translate(auto, auto);
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 880px) {
   .main-container .menus-container__name .fa-regular,
   .main-container .menus-container__name .fa-solid {
     position: absolute;
@@ -862,7 +859,7 @@ header .header__loc i {
   display: none;
   z-index: 1;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 880px) {
   .main-container .menus-container__name__logo {
     position: absolute;
     top: 450px;
@@ -894,7 +891,7 @@ header .header__loc i {
   -webkit-transform: translate(auto, auto);
           transform: translate(auto, auto);
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 880px) {
   .main-container .menus-container__name__logo {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -963,10 +960,6 @@ header .header__loc i {
   -webkit-box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
 }
-.main-container .menus-container__cards .menus-container__cards_content__price__anim {
-  background: #99e2d0;
-  width: 100%;
-}
 .main-container .menus-container__cards:hover .menus-container__cards_content__price {
   -webkit-transform: translateX(0);
           transform: translateX(0);
@@ -996,15 +989,18 @@ header .header__loc i {
   -webkit-transition: all 0.8s;
   transition: all 0.8s;
 }
+.main-container .menus-container__cards .menus-container__cards_content__price .menus-container__cards_content__price__anim {
+  background: #99e2d0;
+  width: 100%;
+}
 .main-container .menus-container__cards .menus-container__cards_content__price .fa-circle-check {
   opacity: 1;
   color: white;
 }
 .main-container .menus-container__cards .menus-container__cards_content__price span {
   border-radius: 0 15px 15px 0;
-  margin-left: 10px;
   padding: 0 15px;
-  width: 115%;
+  width: 100%;
   height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1051,7 +1047,7 @@ footer ul #ustensils,
 footer ul #handshake {
   margin-right: 10px;
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 880px) {
   footer {
     padding: 30px 0 20px;
     display: -webkit-box;
