--- a/scss/layouts/_main-container.scss
+++ b/scss/layouts/_main-container.scss
@@ -19,6 +19,7 @@
     max-width: 1055px;
   }
 
+  //=========== Image En-tête=============================
   .main-container__img {
     width: 100%;
     position: absolute;
@@ -36,7 +37,7 @@
     }
   }
 
-  // Titre de la Fiche
+  //================== Titre de la Fiche===================
   .menus-container__name {
     position: relative;
 
@@ -49,17 +50,13 @@
       font-weight: 200;
       font-size: 1.75rem;
       margin-right: 20px;
-
-      @media screen and (min-width: 1200px) {
-        padding-bottom: 190px;
-      }
     }
 
     padding: 25px 10px 0;
     align-items: center;
     display: flex;
 
-    // position des coeurs
+    //==================== position des coeurs======================
     .menus-container__name__heart {
       display: flex;
     }
@@ -84,49 +81,17 @@
 
     transition: 0.8s ease-in-out;
     background-image: $gradient2;
+    transition: 1s;
 
     &:hover {
       opacity: 1;
     }
+
+    &:active {
+      transform: scale(2.05);
+    }
+
   }
-
-  .menus-container__name__logo {
-    position: relative;
-    width: 100%;
-    max-width: 1440px;
-    height: 97px;
-    background: $white;
-    box-shadow: 0px 4px 10px rgba(59, 59, 59, 0.25);
-    display: none;
-    z-index: 1;
-
-
-    @media screen and (min-width: 1200px) {
-      position: absolute;
-      top: 420px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-    }
-
-
-    img {
-      width: 15%;
-    }
-
-    .fas {
-
-      font-size: 1rem;
-      @include absolute-el(auto, auto, auto, 10px, auto, auto);
-    }
-
-    @media screen and (min-width: 1200px) {
-      display: flex;
-    }
-  }
-
-
 
   .menus-container__title {
     flex-direction: column;
@@ -134,6 +99,7 @@
     gap: 5px;
   }
 
+  //=============Titres menus====================================
   .menus-container__title h2 {
     padding: 25px 10px 0 10px;
     text-align: left;
@@ -152,39 +118,39 @@
     }
   }
 
-  .menus-container__cards_title {
-    line-height: 25px;
-    text-align: left;
-    padding: 0 10px;
-    overflow: hidden;
-    width: 70%;
-    transition: all ease-in-out 0.4s;
-
-    h3 {
-      font-size: 1.125rem;
-    }
-  }
-
-  .menus-container__cards_title__text {
-    white-space: nowrap;
-    transition: all ease-in-out 0.4s;
-  }
-
+  //=================Début Cartes Restaurants===========================
   .menus-container__cards {
     display: flex;
     align-items: center;
     justify-content: space-between;
     overflow: hidden;
-    background: white;
+    background: $white;
     height: 69px;
     border-radius: 15.0431px;
     margin: 10px;
     gap: 5px;
     box-shadow: 0px 4.01149px 15.0431px rgba(0, 0, 0, 0.1);
 
+    //=================Libellés Cartes====================================
+    .menus-container__cards_title {
+      line-height: 25px;
+      text-align: left;
+      padding: 0 10px;
+      overflow: hidden;
+      width: 70%;
+      transition: all ease-in-out 0.4s;
 
+      h3 {
+        font-size: 1.125rem;
+      }
+    }
 
+    .menus-container__cards_title__text {
+      white-space: nowrap;
+      transition: all ease-in-out 0.4s;
+    }
 
+    //===========================Animation Cartes================================
 
     &:hover {
       .menus-container__cards_content__price {
@@ -199,45 +165,53 @@
 
     .menus-container__cards_content {
       height: 100%;
-
-      p {
-
-        font-family: $font5;
-        font-size: 0.94rem;
-
-      }
     }
 
     .menus-container__cards_content__price {
+      overflow: hidden;
+      background: $green1;
       display: flex;
-      align-items: baseline;
-      width: 90px;
+      align-items: flex-start;
+      width: 100px;
       height: 100%;
+
+
       transform: translateX(65px);
       transition: all 0.8s;
 
+      p {
+        background: $white;
+        display: flex;
+        align-items: flex-end;
+
+
+        height: 100%;
+
+        z-index: 5;
+        padding-right: 20px;
+        padding-bottom: 12px;
+      }
 
       .menus-container__cards_content__price__anim {
 
-        background: $green1;
+        background: aquamarine;
         width: 100%;
-
-      }
-
-      .fa-circle-check {
-        opacity: 1;
-        color: white;
       }
 
       span {
         border-radius: 0 15px 15px 0;
-
         padding: 0 15px;
-        width: 100%;
+
         height: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
+      }
+
+      //===========icone circle-check=====================
+      .fas {
+        opacity: 1;
+        color: white;
       }
     }
   }
