--- a/scss/index.css
+++ b/scss/index.css
@@ -133,9 +133,9 @@ img {
   width: 135px;
   height: 135px;
   border-radius: 50%;
-  -webkit-filter: blur(3px);
-          filter: blur(3px);
-  border: 5px solid #008766;
+  border: 5px solid transparent;
+  background: linear-gradient(200.64deg, #9356dc -5.2%, #ff79da 110.74%);
+  opacity: 0.2;
   border-top-color: transparent;
   border-bottom-color: transparent;
   -webkit-animation: animcercle 2s linear;
@@ -144,8 +144,6 @@ img {
 .main-container__loader .circle2 {
   width: 110px;
   height: 110px;
-  -webkit-filter: blur(2px);
-          filter: blur(2px);
   border-radius: 50%;
   border: 5px solid #99e2d0;
   border-right-color: transparent;
@@ -160,7 +158,7 @@ img {
   left: 48%;
   opacity: 1;
   top: 70%;
-  margin: -47px 0px 0px -52px;
+  margin: -47px 0px 0px -56px;
   font-size: 2rem;
 }
 .main-container__loader .circle1__log__anim p {
@@ -238,8 +236,6 @@ img {
   width: 90px;
   height: 90px;
   border-radius: 50%;
-  -webkit-filter: blur(2px);
-          filter: blur(2px);
   border: 5px dotted #008766;
   -webkit-animation: animcercle 2s linear;
           animation: animcercle 2s linear;
@@ -248,8 +244,6 @@ img {
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  -webkit-filter: blur(2px);
-          filter: blur(2px);
   border: 5px dotted #99e2d0;
   animation: animcercle 1s linear reverse;
 }
