--- a/scss/applets/_header.scss
+++ b/scss/applets/_header.scss
@@ -1,7 +1,7 @@
 //================ Header Index================
 header {
   display: flex;
-
+  position: relative;
   flex-direction: column;
 
   .header__logo {
@@ -13,15 +13,18 @@ header {
 
 
   .header__logo__arrow {
+
+
     i {
       position: absolute;
       left: 20px;
+      top: 10px;
     }
   }
 
   .header__logo img {
     max-width: 200px;
-    width: 50%;
+
 
   }
 
