--- a/scss/index.css
+++ b/scss/index.css
@@ -332,6 +332,7 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  position: relative;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -350,10 +351,10 @@ header .header__logo {
 header .header__logo__arrow i {
   position: absolute;
   left: 20px;
+  top: 10px;
 }
 header .header__logo img {
   max-width: 200px;
-  width: 50%;
 }
 header .header__loc {
   background: #ebebea;
