--- a/scss/layouts/_choose-section.scss
+++ b/scss/layouts/_choose-section.scss
@@ -1,4 +1,5 @@
 .choose-section {
+
   margin-bottom: 60px;
   position: relative;
 
@@ -110,5 +111,12 @@
     background: $purple;
     color: white;
     border-radius: 100%;
+
+
+    p {
+      position: absolute;
+      top: 2px;
+      right: 8px;
+    }
   }
 }
