--- a/scss/layouts/_restaurants-section.scss
+++ b/scss/layouts/_restaurants-section.scss
@@ -10,13 +10,15 @@
   }
 
   .restaurants-section__cards-container {
+    padding: 0 20px;
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 20px;
     position: relative;
 
     .restaurants-section__cards-container__cards {
-      margin-bottom: 10px;
+      border-radius: 40px 40px 0 0;
+      background: $white;
     }
 
     @media screen and (min-width: 1200px) {
@@ -30,7 +32,7 @@
         "lpg lne"
         "alf lds";
       grid-column-gap: 100px;
-      grid-row-gap: 5px;
+      grid-row-gap: 50px;
     }
 
     #lpg {
@@ -59,9 +61,9 @@
 
   .restaurants-section__cards-container img {
     border-radius: 40px 40px 0 0;
-    padding: 20px 10px 0;
+    padding-bottom: 20px;
     width: 100%;
-    height: 251px;
+    height: 175px;
   }
 
   .card-content {
@@ -99,7 +101,7 @@
   }
 
   h4 {
-    padding-left: 30px;
+    padding-left: 15px;
 
     font-family: $font5;
     font-size: 1.125rem;
@@ -113,7 +115,7 @@
   }
 
   .restaurants-section__cards-container__cards__content__title p {
-    padding-left: 30px;
+    padding-left: 15px;
     font-family: $font3;
     font-size: 1.063rem;
   }
