--- a/scss/index.css
+++ b/scss/index.css
@@ -150,6 +150,7 @@ img {
   animation: animcercle 1s linear reverse;
 }
 .main-container__loader .circle1__log__anim {
+  z-index: 5;
   color: #9356dc;
   width: 104px;
   height: 128px;
