--- a/components/_buttons.scss
+++ b/components/_buttons.scss
@@ -8,7 +8,7 @@ button {
   max-width: 218px;
   height: 50px;
   border-radius: 25px;
-  margin: 20px 0 50px;
+  margin-top: 20px;
   box-shadow: 0px 4px 10px rgba(59, 59, 59, 0.25);
   transition: all 453ms linear;
 
