--- a/scss/index.css
+++ b/scss/index.css
@@ -132,9 +132,8 @@ img {
   width: 135px;
   height: 135px;
   border-radius: 50%;
-  border: 5px solid transparent;
-  background: linear-gradient(200.64deg, #9356dc -5.2%, #ff79da 110.74%);
-  opacity: 0.2;
+  background: linear-gradient(0deg, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0.15)), linear-gradient(200.64deg, #9356dc -5.2%, #ff79da 110.74%);
+  opacity: 0.5;
   border-top-color: transparent;
   border-bottom-color: transparent;
   -webkit-animation: animcercle 2s linear;
@@ -144,6 +143,7 @@ img {
   width: 110px;
   height: 110px;
   border-radius: 50%;
+  opacity: 0.5;
   border: 5px solid #99e2d0;
   border-right-color: transparent;
   border-left-color: transparent;
@@ -236,6 +236,7 @@ img {
   height: 90px;
   border-radius: 50%;
   border: 5px dotted #008766;
+  opacity: 0.5;
   -webkit-animation: animcercle 2s linear;
           animation: animcercle 2s linear;
 }
@@ -610,7 +611,7 @@ header .header__loc i {
   padding-bottom: 0;
 }
 .restaurants-section .restaurants-section__cards-container img {
-  border-radius: 40px 40px 0 0;
+  border-radius: 20px 20px 0 0;
   padding-bottom: 20px;
   width: 100%;
   height: 175px;
@@ -744,6 +745,9 @@ header .header__loc i {
   .main-container .menus-container {
     margin-top: 340px;
   }
+}
+.main-container .menus-container__cards_content__button {
+  margin-bottom: 30px;
 }
 .main-container .main-container__img {
   width: 100%;
