--- a/scss/layouts/_loader.scss
+++ b/scss/layouts/_loader.scss
@@ -57,9 +57,9 @@
         width: 135px;
         height: 135px;
         border-radius: 50%;
-        border: 5px solid transparent;
-        background: linear-gradient(200.64deg, #9356dc -5.2%, #ff79da 110.74%);
-        opacity: 0.2;
+
+        background: $gradient1;
+        opacity: 0.5;
         border-top-color: transparent;
         border-bottom-color: transparent;
         animation: animcercle 2s linear;
@@ -69,6 +69,7 @@
         width: 110px;
         height: 110px;
         border-radius: 50%;
+        opacity: 0.5;
         border: 5px solid #99e2d0;
         border-right-color: transparent;
         border-left-color: transparent;
@@ -135,6 +136,7 @@
         height: 90px;
         border-radius: 50%;
         border: 5px dotted #008766;
+        opacity: 0.5;
         animation: animcercle 2s linear;
     }
 
