--- a/scss/layouts/_loader.scss
+++ b/scss/layouts/_loader.scss
@@ -4,7 +4,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 1;
+    z-index: 6;
 
     //=========Fader page index=============
     animation: fadeOut 1s linear 1s forwards;
@@ -77,7 +77,7 @@
     }
 
     .circle1__log__anim {
-        z-index: 5;
+        // z-index: 5;
         color: #9356dc;
         width: 104px;
         height: 128px;
